@@ -40,7 +40,7 @@ class Page extends BasePage
 
 		$category = new Category(['Settings' => $content->pdo]);
 		if ($this->userdata != null) {
-			$parentcatlist = $category->getForMenu($this->userdata["categoryexclusions"]);
+			$parentcatlist = $category->getForMenu($this->userdata["categoryexclusions"], $this->userdata['rolecategoryexclusions']);
 		} else {
 			$parentcatlist = $category->getForMenu();
 		}
