@@ -9,6 +9,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2016-10-20 DariusIII
+	Fix: User and role category exclusions (fixes issue #2290)
 2016-10-19 niel
 	Chg: Remove the yEnc initialising code as it is not needed any longer.
 2016-10-18 DariusIII
